--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luis Guilherme - Desenvolvedor e Designer</title>
+  <title>Luis Guilherme - Desenvolvedor e UX/UI Designer (Update Teste01)</title>
   <meta name="description" content="Criação de uma portifílo de Luis Guilherme">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
