--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Luis Guilherme - Desenvolvedor e UX/UI Designer (Update Teste01)</title>
   <meta name="description" content="Criação de uma portifílo de Luis Guilherme">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
