--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="description" content="Criação de uma portifílo de Luis Guilherme">
   <link rel="stylesheet" href="./css/style.min.css">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -87,7 +90,7 @@
       <h2 class="subtitulo">Formação</h2>
 
       <div>
-        <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong>  🎓 que fiz no exterior em <strong> UX Design </strong> . Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
+        <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong> UX Design </strong> . Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
 
         <ul class="faculdade-lista">
           <li class="faculdade">
@@ -113,7 +116,7 @@
         </ul>
 
         <div class="formacao-extra">
-          <div class="cursos"> 
+          <div class="cursos">
             <h3>Cursos Instensivos</h3>
             <ul>
               <li>UX Design & UI Design <span> 56h </span></li>
@@ -121,7 +124,7 @@
             </ul>
           </div>
 
-          <div class="idiomas"> 
+          <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
               <li>Inglês <span> / Fluente </span></li>
@@ -135,17 +138,17 @@
     </div>
   </section>
 
-  <footer class="footer" id="contato"> 
+  <footer class="footer" id="contato">
     <div class="footer-container">
       <p class="footer-texto">
         Estou disponível para novos projetos no momento. Entre em contato comigo e marcaremos uma conversa! </p>
 
-        <ul class="footer-contato">
-          <li>luisguilhermess15@gmail.com</li>
-          <li>+55 89 99469-6269</li>
-          <li><a href="index.html">@luisguilhermex7</a></li>
-        </ul>
-        <p class="footer-copy">Luis Guilherme. Alguns direitos reservados.</p>
+      <ul class="footer-contato">
+        <li>luisguilhermess15@gmail.com</li>
+        <li>+55 89 99469-6269</li>
+        <li><a href="index.html">@luisguilhermex7</a></li>
+      </ul>
+      <p class="footer-copy">Luis Guilherme. Alguns direitos reservados.</p>
     </div>
   </footer>
 
